cmake_minimum_required(VERSION 3.27)
project(CLion_C_Lang C)

set(CMAKE_C_STANDARD 23)

add_executable(CLion_C_Lang func_testbook.c
        pointer_doghag.c
        boksumb_4_8_func_1.c
        boksumb_4_8_func_2.c
        boksumb_4_8_func_3.c
        boksumb_4_8_func_4.c
        boksumb_4_8_func_5.c
        boksumb_4_8_func_6.c
        boksumb_4_8_func_7.c
        bang_cLang_4_8.c
)

